instrumentation tests added

--- a/progressbuttonlibrary/build.gradle
+++ b/progressbuttonlibrary/build.gradle
@@ -33,11 +33,21 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    // Optional -- UI testing with Espresso
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
+//    // Optional -- Mockito framework
+//    testCompile 'org.mockito:mockito-core:1.10.19'
+//    androidTestCompile 'com.android.support:support-annotations:24.0.0'
+//    androidTestCompile 'com.android.support.test:runner:0.5'
+//    androidTestCompile 'com.android.support.test:rules:0.5'
+//    // Optional -- Hamcrest library
+//    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+//    // Optional -- UI testing with UI Automator
+//    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 }
 
 // or use the remote copy to keep update with latest changes
